fix: overflow when burger open

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -15,10 +15,6 @@ html {
 body {
   box-sizing: inherit;
   font-family: $font-primary;
-
-  &.--active {
-    overflow: hidden;
-  }
 }
 
 // .container {
