--- a/src/styles/_popup.scss
+++ b/src/styles/_popup.scss
@@ -33,6 +33,9 @@
     & > img {
       width: 100%;
     }
+    @media only screen and(max-width: 69em) {
+      flex: 0 0 40%;
+    }
     @media only screen and (max-width: $bp-medium) {
       display: none;
     }
